--- a/fa-tiff-to-png/Dockerfile
+++ b/fa-tiff-to-png/Dockerfile
@@ -1,15 +1,14 @@
 FROM mcr.microsoft.com/azure-functions/python:2.0
 
+# to log errors to the console
 ENV AzureFunctionsJobHost__Logging__Console__IsEnabled=true
 
-ENV http_proxy http://esiproxy:8080
-ENV https_proxy https://esiproxy:8080
-
+# Importnat to install libgtk for opencv
 RUN apt-get update && apt-get install -y \
-    libgtk2.0-dev \
-    python-opencv 
+    libgtk2.0-dev 
 
-RUN cat /etc/os-release
+# Find OS and version of the liinux image
+# RUN cat /etc/os-release
 
 COPY . /home/site/wwwroot
 
