--- a/tiff-to-png/.vscode/settings.json
+++ b/tiff-to-png/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": ".env\\Scripts\\python.exe",
+    "python.pythonPath": "C:\\Users\\tojose\\AppData\\Local\\Programs\\Python\\Python36\\python.exe",
     "python.linting.pylintEnabled": false,
     "python.linting.pep8Enabled": true,
     "python.linting.enabled": true
