--- a/tiff-to-png/Dockerfile
+++ b/tiff-to-png/Dockerfile
@@ -1,71 +1,21 @@
-FROM python:3-alpine3.6
+FROM ubuntu:18.04
 
-RUN echo -e '@edgunity http://nl.alpinelinux.org/alpine/edge/community\n\
-@edge http://nl.alpinelinux.org/alpine/edge/main\n\
-@testing http://nl.alpinelinux.org/alpine/edge/testing\n\
-@community http://dl-cdn.alpinelinux.org/alpine/edge/community'\
-  >> /etc/apk/repositories
+RUN apt-get -y update
+RUN apt-get -y upgrade
+# RUN apt-get install build-essential 
+# RUN apt-get install wget cmake git libgtk2.0-dev pkg-config 
+# RUN apt-get install libavcodec-dev libavformat-dev libswscale-dev
+# RUN apt-get install libtbb2 libtbb-dev libjpeg-dev libpng-dev libtiff-dev libjasper-dev libdc1394-22-dev
+RUN apt-get install -y libgtk2.0-dev python3-dev python3-pip 
+RUN apt-get install -y python-flask
 
-RUN apk update && apk upgrade --no-cache
-RUN apk add --update --no-cache \
-      build-base \
-      openblas-dev \
-      unzip \
-      wget \
-      cmake \
-      #Intel® TBB, a widely used C++ template library for task parallelism'
-      libtbb@testing  \
-      libtbb-dev@testing   \
-      # Wrapper for libjpeg-turbo
-      libjpeg  \
-      # accelerated baseline JPEG compression and decompression library
-      libjpeg-turbo-dev \
-      # Portable Network Graphics library
-      libpng-dev \
-      # A software-based implementation of the codec specified in the emerging JPEG-2000 Part-1 standard (development files)
-      jasper-dev \
-      # Provides support for the Tag Image File Format or TIFF (development files)
-      tiff-dev \
-      # Libraries for working with WebP images (development files)
-      libwebp-dev \
-      # A C language family front-end for LLVM (development files)
-      clang-dev \
-      linux-headers \
-      && pip install numpy
+#Clean up
+RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-ENV CC /usr/bin/clang
-ENV CXX /usr/bin/clang++
-
-ENV OPENCV_VERSION=4.0.1
-
-RUN mkdir /opt && cd /opt && \
-  wget https://github.com/opencv/opencv/archive/${OPENCV_VERSION}.zip && \
-  unzip ${OPENCV_VERSION}.zip && \
-  rm -rf ${OPENCV_VERSION}.zip
-
-RUN mkdir -p /opt/opencv-${OPENCV_VERSION}/build && \
-  cd /opt/opencv-${OPENCV_VERSION}/build && \
-  cmake \
-  -D CMAKE_BUILD_TYPE=RELEASE \
-  -D CMAKE_INSTALL_PREFIX=/usr/local \
-  -D WITH_FFMPEG=NO \
-  -D WITH_IPP=NO \
-  -D WITH_OPENEXR=NO \
-  -D WITH_TBB=YES \
-  -D BUILD_EXAMPLES=NO \
-  -D BUILD_ANDROID_EXAMPLES=NO \
-  -D INSTALL_PYTHON_EXAMPLES=NO \
-  -D BUILD_DOCS=NO \
-  -D BUILD_opencv_python2=NO \
-  -D BUILD_opencv_python3=ON \
-  -D PYTHON3_EXECUTABLE=/usr/local/bin/python \
-  -D PYTHON3_INCLUDE_DIR=/usr/local/include/python3.6m/ \
-  -D PYTHON3_LIBRARY=/usr/local/lib/libpython3.so \
-  -D PYTHON_LIBRARY=/usr/local/lib/libpython3.so \
-  -D PYTHON3_PACKAGES_PATH=/usr/local/lib/python3.6/site-packages/ \
-  -D PYTHON3_NUMPY_INCLUDE_DIRS=/usr/local/lib/python3.6/site-packages/numpy/core/include/ \
-  .. && \
-  make VERBOSE=1 && \
-  make && \
-  make install && \
-  rm -rf /opt/opencv-${OPENCV_VERSION}
+#Copy requirements.txt to leverage docker cache
+COPY ./requirements.txt /app/requirements.txt
+WORKDIR /app
+RUN pip3 install -r requirements.txt
+COPY . /app
+ENTRYPOINT [ "python3" ]
+CMD [ "app.py" ]
