--- a/tiff-to-png-app/Dockerfile
+++ b/tiff-to-png-app/Dockerfile
@@ -12,8 +12,10 @@ RUN pip3 install -r requirements.txt
 RUN pip3 install gunicorn
 COPY . /app
 
-EXPOSE 8000
-CMD ["gunicorn", "--config", "./conf/gunicorn_config.py", "app:application"] 
-
 #Clean up
 RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+
+EXPOSE 80
+ENTRYPOINT [ "python3" ]
+CMD ["app.py"] 
+
